--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "postcss-loader": "^8.1.1",
+    "postcss-simple-vars": "^7.0.1",
     "vue": "^2.7.16",
     "vue-fragment": "^1.5.1",
     "vue-i18n": "^8.11.2",
