--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -9,7 +9,7 @@
     "prepare": "npx husky install",
     "lint": "eslint 'src/**/*.{ts,js,vue,tsx}'",
     "lint-fix": "eslint --fix 'src/**/*.{ts,js,vue,tsx}'",
-    "build" : "vite build"
+    "build": "vite build"
   },
   "author": "dy",
   "license": "ISC",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@cloudforet-test/mirinae": "^2.0.0-dev125",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "postcss-loader": "^8.1.1",
     "vue": "^2.7.16",
