--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.4",
