--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@cloudforet-test/mirinae": "2.0.0-dev171",
+    "@vueuse/core": "^10.7.2",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
@@ -34,7 +35,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "8.22.0",
+    "eslint": "8.57.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.27.0",
     "lint-staged": "^13.2.0",
