--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "@vueuse/core": "^11.0.1",
     "autoprefixer": "^10.4.19",
     "eslint": "8.22.0",
     "eslint-plugin-prettier": "^5.0.0",
