--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@cloudforet-test/mirinae": "2.0.0-dev171",
     "@vueuse/core": "^10.7.2",
+    "@vueuse/integrations": "^11.0.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
@@ -34,6 +35,7 @@
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "async-validator": "^4.2.5",
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-plugin-prettier": "^5.0.0",
