--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -20,6 +20,7 @@
     "@vueuse/integrations": "^11.0.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "postcss-loader": "^8.1.1",
     "vue": "^2.7.16",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
