--- a/mc_web_console_new_front/package.json
+++ b/mc_web_console_new_front/package.json
@@ -16,8 +16,11 @@
   "type": "module",
   "dependencies": {
     "@cloudforet-test/mirinae": "2.0.0-dev171",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/integrations": "^11.0.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "postcss-loader": "^8.1.1",
     "vue": "^2.7.16",
@@ -27,14 +30,16 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-vue2": "^2.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "async-validator": "^4.2.5",
     "autoprefixer": "^10.4.19",
-    "eslint": "8.22.0",
+    "eslint": "8.57.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.27.0",
     "lint-staged": "^13.2.0",
