--- a/mc_web_console_new_front/Dockerfile
+++ b/mc_web_console_new_front/Dockerfile
@@ -8,6 +8,9 @@ RUN npm install --legacy-peer-deps --save-prod
 
 COPY . .
 
+ARG VITE_BACKEND_URL=http://localhost:3000
+ENV VITE_BACKEND_URL=${VITE_BACKEND_URL}
+
 RUN npm run build
 
 ## Stage 2: Run Build Application
