--- a/mc_web_console_new_front/.env
+++ b/mc_web_console_new_front/.env
@@ -1,4 +1,5 @@
 VITE_BACKEND_ENDPOINT = '/api'
-VITE_BACKEND_URL = 'http://dev.onecloudcon.com:3000'
+VITE_BACKEND_URL2 = 'http://dev.onecloudcon.com:3000'
+VITE_BACKEND_URL = 'http://localhost:3000'
 VITE_PROJECT_NAME = 'MCMP'
 
